--- a/1. Rn中的线性方程组.md
+++ b/1. Rn中的线性方程组.md
@@ -1,4 +1,59 @@
 
+## 1.0 核心概念
+
+### 线性方程组
+
+- **定义**：多个形如 $a_1x_1 + \cdots + a_nx_n = b$ 的方程组合
+- **解的可能性**：无解、唯一解、无穷多解
+- **几何意义**：每个方程描述一个线性对象，解代表这些对象的交点
+
+### 向量空间
+
+- **基本定义**：n维向量是有序n元组 $(x_1,...,x_n)$，所有n维向量构成 $\mathbb{R}^n$
+- **基本运算**：加法（平行四边形法则）和数乘（向量拉伸）
+- **运算性质**：交换律、结合律、分配律等代数性质
+
+### 线性组合与张成
+
+- **线性组合**：$b = c_1a_1 + \cdots + c_ka_k$，其中$c_i$为权重
+- **张成空间**：$\text{span}\{a_1,...,a_n\}$是所有可能的线性组合集合
+- **核心关系**：线性方程组有解当且仅当$b$可表示为$a_1,...,a_n$的线性组合
+
+### 矩阵与向量的乘法
+
+- **定义**：$Ax = a_1x_1 + \cdots + a_nx_n$，表示矩阵列向量的线性组合
+- **性质**：满足分配律和结合律
+
+### 方程组解集
+
+- **齐次系统**：$Ax = 0$；至少有平凡解；解集是线性对象
+- **非齐次系统**：$Ax = b$，$b \neq 0$
+- **关键定理**：非齐次系统解集 = 一个特解 + 对应齐次系统解集
+
+### 线性独立性
+
+- **定义**：向量组${v_1,...,v_k}$线性独立当且仅当$c_1v_1 + \cdots + c_kv_k = 0$只有平凡解
+- **等价条件**：集合线性相关当且仅当至少一个向量可以表示为其他向量的线性组合
+
+### 线性映射
+
+- **定义**：满足加性和齐次性的映射$T: D \to W$
+- **矩阵表示**：每个线性映射$T: \mathbb{R}^n \to \mathbb{R}^m$都对应唯一矩阵$A$使得$T(x) = Ax$
+- **几何解释**：将线性对象映射为线性对象；保持原点不变
+
+## 重要应用
+
+### 二维平面的线性变换
+
+- **拉伸/压缩**：改变特定方向的尺度
+- **剪切**：使平行线保持平行但改变角度
+- **旋转**：绕原点旋转特定角度
+- **投影**：将向量投射到特定方向或子空间
+
+### 函数空间的线性映射
+
+- **在统计学中的应用**：求解回归问题 $Y = f(X) + \epsilon$
+- **本质**：在无限维函数空间中进行线性代数运算
 ## 1.1 线性方程组
 
 **线性方程** - 描述的是多维空间中的"直线性"（=线性）对象
@@ -22,8 +77,6 @@
 
 $a_{11}x_1 + ... + a_{1n}x_n = b_1$  
 $a_{21}x_1 + ... + a_{2n}x_n = b_2$  
-.  
-.  
 .  
 $a_{m1}x_1 + ... + a_{mn}x_n = b_m$  
 
@@ -131,6 +184,8 @@ Ax = $a_1x_1 + ... + a_nx_n$
 **定理 - 2**：齐次线性方程组的解集可以表示为 span{v₁,...,vₖ}，其中 v₁,...,vₖ 是向量。
 
 **线性方程组的解集总是可以表示为向量的线性张成**。由此可知，齐次线性方程组的解集要么只包含零点，要么是一条通过零点的直线/超平面，**无论哪种情况，解都是一个线性对象**。
+
+**齐次系统至少有一组平凡解（即全为0的向量）**
 ### 1.4.2 非齐次系统
 
 **定义**：形如 Ax = b 且 b ≠ 0 的线性方程组被称为**非齐次**的
@@ -267,7 +322,7 @@ $$
 根据定理，原方程的解集为：
 $$L_i = \{x_0 + x_h: x_h \in L_h\} = \{x_0 + \vec{0}\} = \{x_0\} = \left\{\begin{bmatrix} 1 \\ 2 \end{bmatrix}\right\}$$
 
-## 线性独立性
+## 1.5 线性独立性
 
 并不能直接确定解集是一条直线、一个平面或更高维的超平面。这与张成空间的定义有关。对于给定的向量v₁,...,vₖ，有可能span{v₁,...,vₖ} = span{v₁,...,vₖ₋₁}，这种情况发生在当vₖ可以表示为v₁,...,vₖ₋₁的线性组合时。也就是说：
 
@@ -295,6 +350,77 @@ $$L_i = \{x_0 + x_h: x_h \in L_h\} = \{x_0 + \vec{0}\} = \{x_0\} = \left\{\begin
 
 **注释：** 我们事先不知道哪个向量可以表示为其他向量的线性组合。为了检验独立性，证明的第一部分提示了一种简单的方法。从k = 2开始，**我们检查vₖ是否可以表示为前面向量v₁,...,vₖ₋₁的线性组合。**
 
+**其它性质**：
+
+- 如果我们将一个**线性相关的集合**{v₁,...,vₖ}**扩展**为{v₁,...,vₖ₊₁}，**它仍然是线性相关的**
+
+	1. 因为集合{v1,...,vk}线性相关，所以：c1v1 + ... + ckvk = 0， 其中{c1,...ck}不全为0
+	2. 扩展集合到{v1,...,vk,vk+1}，我们可以构造出一个线性组合 c1v1 + ... + ckvk + 0vk+1 = 0，可见，{c1,...ck,0} 不全为0
+	3. 因此，扩展出来的集合也是线性相关
+
+- 如果我们将一个**线性独立的集合**{v₁,...,vₖ}**缩减**为{v₁,...,vₖ₋₁}，**它仍然是线性独立的**
+
+	1. 假设集合{v1,...,vk}线性独立，缩减后的集合{v1,...,vk-1}是线性相关的，因此存在不全为0的集合{c1,...,ck-1}，使得 c1v1 +...+ ck-1vk-1 = 0
+	2. 考虑原始集合的一个线性组合 c1v1 + ... + ck-1vk-1 + 0vk = 0，这样，我们找到了一个非平凡的线性组合{c1,...,ck-1,0}(即ck = 0)，这就意味着{v1,...,vk}是线性相关的，和假设矛盾
+	3. 因此，线性独立的集合缩减后，仍然线性独立
+## 1.6 线性映射
+
+对于给定的矩阵 $A ∈ \mathbb{R}^{m×n}$，矩阵-向量乘积将每个向量 $x \in \mathbb{R}^n$ 变换为向量 $Ax \in \mathbb{R}^m$。通过这个变换，**可以定义一个映射/函数 T: ℝ^n → ℝ^m**，由 **T(x) = Ax** 给出。我们称这类映射为**线性映射**。
+
+**理解：通过一个 m x n 的矩阵，将 n-阶向量 变换为 m-阶向量，这也是一个函数映射。**
+
+### 1.6.1 一般线性映射
+
+**定义**：如果映射 T ： D -> W 满足以下条件，我们称这个映射为线性的：
+
+- **映射可加性**：对于所有$x,y \in D$，有 $T(x + y) = T(x) + T(y)$
+- **映射数乘性**：对于所有$c \in \mathbb{R}, x \in \mathbb{D}$，有 $T(cx) = cT(x)$
+
+**定理**：映射 $T: \mathbb{R}^n \rightarrow \mathbb{R}^m$ 是线性的，当且仅当存在唯一的矩阵：$A \in \mathbb{R}^{m × n}$， 使得对于所有的$x \in \mathbb{R}^n, T(x) = Ax$
+
+**从几何角度看，线性映射将直线形状的对象转换为其他直线形状的对象**。例如，如果我们对ℝⁿ中的一条直线上的所有点进行线性变换，我们会得到ℝᵐ中的另一条直线（或一个点）。
+
+**此外，如果原始集合包含零点，那么变换后的集合也包含零点。**
+
+### 1.6.2 线性映射 ℝ² → ℝ²
+
+一些线性变换在平面上的几何变换例子：
+
+$$A = \begin{bmatrix} a & b \\ c & d \end{bmatrix}$$
+其中，
+
+1. a - 控制 x 轴方向的拉伸和压缩，如果为负数，则为镜像（以y轴为对称的镜像）
+2. d - 控制 y 轴方向的拉伸和压缩，如果为负数，则为镜像（以x轴为对称的镜像）
+3. b - 控制水平剪切变换：将平面沿着水平方向”错位“的线性变换
+4. c - 控制垂直剪切变换：将平面沿着垂直方向”错位“的线性变换
+
+- **压缩和拉升**：对于$k \in \mathbb{R}$ $$A = \begin{bmatrix} k & 0 \\ 0 & 1 \end{bmatrix}$$
+- **剪切**：
+- **旋转**（围绕原点）：
+- **投影**：可以理解为压缩为0长度？
+
+### 1.6.3 函数空间的线性映射
+
+因为存在许多重要的线性映射是在非欧几里得空间之间进行的，其中最重要的例子是函数空间之间的映射。
+
+### 函数空间在统计学中的应用
+
+在现代统计学中，函数空间是不可或缺的概念，以回归问题为例：
+
+- 我们寻找函数 $f$，使得 $Y = f(X) + \epsilon$
+- 其中 $Y, X \in \mathbb{R}$ 是随机变量
+- $\epsilon$ 是噪声，满足 $\mathbb{E}[\epsilon | X] = 0$
+
+给定 $X = x$，我们可以通过 $f(x)$ 预测 $Y$，因为：  
+
+$\mathbb{E}[Y|X = x] = \mathbb{E}[f(x) + \epsilon|X = x] = f(x)$
+
+### 函数估计与线性代数
+
+在实际应用中，算法会从函数集合 $\mathcal{F}$ 中寻找一个估计函数 $\hat{f}$。通过线性代数的结果，我们可以更好地理解这些函数集合及相关算法。
 
 
-## 线性映射
+**举例**：
+
+**这里积分涉及到了勒贝格积分，暂时先不看，等学了勒贝格积分后再回头看。**
+
