--- a/0. 课程目录.md
+++ b/0. 课程目录.md
@@ -1,31 +1,31 @@
 
 ## 1 Rn中的线性方程组 1
 
-1.1 线性方程组 . . . . . . . . . . . . . . . . . . . . . . . . . . . . 1  
-1.2 行阶梯形式 . . . . . . . . . . . . . . . . . . . . . . . . . . . . 3  
-1.3 解的数量 . . . . . . . . . . . . . . . . . . . . . . . . . . . . . 6  
-1.4 简化行阶梯形式 . . . . . . . . . . . . . . . . . . . . . . . . . . 7  
-1.5 Rn中的向量 . . . . . . . . . . . . . . . . . . . . . . . . . . . . 9  
-1.6 线性组合 . . . . . . . . . . . . . . . . . . . . . . . . . . . . . 11  
-1.7 矩阵-向量乘法 . . . . . . . . . . . . . . . . . . . . . . . . . . 13  
-1.8 解集 . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . 16  
-1.8.1 齐次系统 . . . . . . . . . . . . . . . . . . . . . . . . . 16  
-1.8.2 非齐次系统 . . . . . . . . . . . . . . . . . . . . . . . . 18  
-1.9 线性独立性 . . . . . . . . . . . . . . . . . . . . . . . . . . . . 18  
-1.10 线性映射 . . . . . . . . . . . . . . . . . . . . . . . . . . . . . 23  
-1.10.1 一般线性映射 . . . . . . . . . . . . . . . . . . . . . . 23  
-1.10.2 R2 → R2的线性映射 . . . . . . . . . . . . . . . . . . . 24  
-1.10.3 函数空间中的线性映射 . . . . . . . . . . . . . . . . . 28
+**1.1 线性方程组 . . . . . . . . . . . . . . . . . . . . . . . . . . . . 1**  
+**1.2 行阶梯形式 . . . . . . . . . . . . . . . . . . . . . . . . . . . . 3**  
+**1.3 解的数量 . . . . . . . . . . . . . . . . . . . . . . . . . . . . . 6**  
+**1.4 简化行阶梯形式 . . . . . . . . . . . . . . . . . . . . . . . . . . 7**  
+**1.5 Rn中的向量 . . . . . . . . . . . . . . . . . . . . . . . . . . . . 9**  
+**1.6 线性组合 . . . . . . . . . . . . . . . . . . . . . . . . . . . . . 11**  
+**1.7 矩阵-向量乘法 . . . . . . . . . . . . . . . . . . . . . . . . . . 13**  
+**1.8 解集 . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . 16**  
+**1.8.1 齐次系统 . . . . . . . . . . . . . . . . . . . . . . . . . 16**  
+**1.8.2 非齐次系统 . . . . . . . . . . . . . . . . . . . . . . . . 18**  
+**1.9 线性独立性 . . . . . . . . . . . . . . . . . . . . . . . . . . . . 18**  
+**1.10 线性映射 . . . . . . . . . . . . . . . . . . . . . . . . . . . . . 23**  
+**1.10.1 一般线性映射 . . . . . . . . . . . . . . . . . . . . . . 23**  
+**1.10.2 R2 → R2的线性映射 . . . . . . . . . . . . . . . . . . . 24**  
+**1.10.3 函数空间中的线性映射 . . . . . . . . . . . . . . . . . 28**
 
 ## 2 矩阵代数 
 
-2.1 矩阵运算 . . . . . . . . . . . . . . . . . . . . . . . . . . . . . 30  
-2.1.1 加法和标量乘法 . . . . . . . . . . . . . . . . . . . . . 30  
-2.1.2 乘法 . . . . . . . . . . . . . . . . . . . . . . . . . . . 31  
-2.1.3 转置 . . . . . . . . . . . . . . . . . . . . . . . . . . . 34  
-2.2 逆矩阵 . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . 35  
-2.2.1 逆矩阵 . . . . . . . . . . . . . . . . . . . . . . . . . . 35  
-2.2.2 计算和初等矩阵 . . . . . . . . . . . . . . . . . . . . . 37  
+**2.1 矩阵运算 . . . . . . . . . . . . . . . . . . . . . . . . . . . . . 30**  
+**2.1.1 加法和标量乘法 . . . . . . . . . . . . . . . . . . . . . 30**  
+**2.1.2 乘法 . . . . . . . . . . . . . . . . . . . . . . . . . . . 31**  
+**2.1.3 转置 . . . . . . . . . . . . . . . . . . . . . . . . . . . 34**  
+**2.2 逆矩阵 . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . 35**  
+**2.2.1 逆矩阵 . . . . . . . . . . . . . . . . . . . . . . . . . . 35**  
+**2.2.2 计算和初等矩阵 . . . . . . . . . . . . . . . . . . . . . 37**  
 2.2.3 等价性和交叉联系 . . . . . . . . . . . . . . . . . . . . 40  
 2.3 应用 . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . 42  
 2.3.1 插值 . . . . . . . . . . . . . . . . . . . . . . . . . . . 42  
