--- a/2. 矩阵代数.md
+++ b/2. 矩阵代数.md
@@ -1,4 +1,85 @@
+## 2.0 知识点快速一览表
 
+- **矩阵**：可以看为向量的向量
+	- 元素为列向量的行向量：
+	$$A = \begin{pmatrix}
+	\begin{pmatrix}
+	a \\ b \\ c
+	\end{pmatrix} & 
+	\begin{pmatrix}
+	d \\ e \\ f
+	\end{pmatrix} & \begin{pmatrix}
+	g \\ h \\ i
+	\end{pmatrix}
+	\end{pmatrix}$$
+	- 元素为行向量的列向量：$$A = 
+	\begin{pmatrix}
+	(a,d,g) \\
+	(b,e,h) \\
+	(c,f,i)
+	\end{pmatrix}
+	$$
+- **矩阵基本运算法则**：交换律、结合律、零元、乘法分配律
+- **矩阵-向量运算**：
+	- 向量 $x$ 左乘矩阵 $A$ 含义为在线性空间中将向量进行某种变换，变换后的向量为 $Ax$，不同的矩阵 $A$，意味着不同的变换，变换类型包括：**缩放、旋转、剪切、投影等**
+	- 线性映射 $Ax,Bx$ 叠加后 $(A+B)x$ ，可以书写为 $x \mapsto (A+B)x$
+- **矩阵乘法三种方式**：$A \in \mathbb{R}^{m * k}, B \in \mathbb{R}^{k * n}$，矩阵乘积 $AB$ 描述了两个线性映射的**复合运算**：
+	- 逐个数值相乘
+	- 按列向量：$AB = (Ab_1 ... Ab_n) \in \mathbb{R}^{m * n}$
+	- 按行向量：$$
+AB = 
+\begin{pmatrix}
+\mathbf{a}_1 B \\
+\vdots \\
+\mathbf{a}_m B
+\end{pmatrix}
+$$
+- **矩阵的转置**：
+	- $(A^T)^T = A$
+	- $(A + B)^T = A^T + B^T$
+	- $(cA)^T = cA^T$
+	- $(AB)^T = B^TA^T$
+- **逆矩阵**：若矩阵 $A$ 的逆矩阵不存在，则称 $A$ 为**奇异矩阵**
+	- $AB = BA = I_n$
+	- $AA^{-1} = A^{-1}A = I_n$
+	- $(A^{-1})^{-1} = A$
+	- $(AB)^{-1} = B^{-1}A^{-1}$
+	- $(A^T)^{-1} = (A^{-1})^T$
+	- 我们也可以通过**行变换**得到这个矩阵的逆矩阵：  $(A | I) \Leftrightarrow (I | A^{-1})$
+- **初等矩阵**：初等矩阵 $E$ 是通过对单位矩阵 $I_n$ 施加 **单个初等行变换** 而得到的。
+
+			$(A|I_n) \Leftrightarrow (E_k...E_1A | E_k...E_1I) \Leftrightarrow (I_n|A^{-1})$
+
+- **行列式**：对于矩阵 $A \in \mathbb{R}^{n×n}$，我们可以定义一个数字 $det(A)$，**它描述了一个n-维物体的体积通过变换而改变的程度**：
+	- 投影 - $det(A) = 0$
+	- 剪切 - $det(A) = 1$
+	- 镜像 - $det(A) = -1$
+	- 缩放 - $det(A) != 0|1$
+- **行列式的计算**： 
+	- **余子式**：可以按行展开，也可以按列展开，数值 $c_{ij} = (-1)^{i+j}det(A_{ij})$ 称为 **余子式**
+		- 按行展开：$det(A) = \sum_{j = 1}^n (-1)^{i+j}a_{ij}det(A_{ij})$
+		- 按列展开：$det(A) = \sum_{i = 1}^n (-1)^{i + j}a_{ij}det(A_{ij})$
+	- **行变换计算**：设 $A, B \in \mathbb{R}^(n×n)$
+		- **倍数原则**：如果我们通过将 $A$ 的一行乘以 $k \in \mathbb{R}$ 得到 $B$，则 $det(B) = k \cdot det(A)$
+		- **消元原则**：如果我们通过将一行的 $k$ 倍加到另一行得到 $B$，则 $det(B) = det(A)$
+		- **交换原则**：如果我们通过交换 $A$ 的两行得到 $B$，则 $det(B) = -det(A)$
+- **行列式的性质**：对于所有 $A,B \in \mathbb{R}^{n×n}$，有：
+	- $det(AB) = det(A)det(B)$
+	- $det(A) = det(A^T)$
+	- $det(kA) = k^n \cdot det(A)$
+	- $det(A+B) != det(A) + det(B)$，$A$ **和 $B$ 有超过一行不同时
+- **相关联系**：
+	- **$A$ 为可逆矩阵**
+	- **$A^T$ 为可逆矩阵**
+	- **A 的简化阶梯形式（初等变换）是单位矩阵 $I_n$**
+	- **线性方程组 $Ax = 0$ 仅有零解（平凡解）**
+	- **对任意 $b \in \mathbb{R}^n$，非齐次线性方程组 $Ax = b$ 有唯一解**
+	- **对任意 $b \in \mathbb{R}^n$，非齐次线性方程组 $Ax = b$ 有解**
+	- **A的列是线性无关的**
+	- **A的行是线性无关的**
+	- **A的列张成$\mathbb{R}^n$空间**
+	- **A的行张成$\mathbb{R}^n$空间**
+	- **$det(A) != 0$**
 ## 2.1 矩阵运算
 
 #### 2.1.1 矩阵**加法**和**数乘** -- 忽略
@@ -96,7 +177,6 @@ $AA^{-1} = A^{-1}A = I_n$
 
 #### 2.2.1 逆矩阵的算法
 
-以下是规范的 LaTeX 数学表达式：
 
 对于矩阵 $$ A = \begin{pmatrix}
 a & b \\
@@ -109,7 +189,145 @@ d & -b \\
 \end{pmatrix}
 $$
 
+我们也可以通过**行变换**得到这个矩阵的逆矩阵  $(A | I) \Leftrightarrow (I | A^{-1})$
+
 #### 2.2.2 初等矩阵
 
-**定义**：若矩阵 E 是通过对单位矩阵 I 施加单个初等行变换而得到的，则称 E 为初等矩阵
+**定义**：若矩阵 E 是通过对单位矩阵 I 施加**单个初等行变换**而得到的，则称 E 为初等矩阵。
+
+对于每个初等行运算，都有一个第二个运算可以撤销第一个。
+
+由此可知，每个初等矩阵E都有一个逆矩阵，并且这个逆矩阵本身也是初等矩阵。
+
+$(A|I_n) \Leftrightarrow (E_k...E_1A | E_k...E_1I) \Leftrightarrow (I_n|A^{-1})$
+
+#### 2.2.3 等价性和横向联系
+
+线性代数的美妙之处在于，所有概念都是相互关联的。
+
+**定理（等价性）**：设 $A \in \mathbb{R}^{n \times n}$，则以下命题为等价命题：
+
+- **$A$ 为可逆矩阵**
+- **$A^T$ 为可逆矩阵**
+- **A 的简化阶梯形式（初等变换）是单位矩阵 $I_n$**
+- **线性方程组 $Ax = 0$ 仅有零解（平凡解）**
+- **对任意 $b \in \mathbb{R}^n$，非齐次线性方程组 $Ax = b$ 有唯一解**
+- **对任意 $b \in \mathbb{R}^n$，非齐次线性方程组 $Ax = b$ 有解**
+- **A的列是线性无关的**
+- **A的行是线性无关的**
+- **A的列张成$\mathbb{R}^n$空间**
+- **A的行张成$\mathbb{R}^n$空间**
+
+例如，要研究逆矩阵的性质，我们同样可以通过刻画方程组 Ax=0 的解集来实现。这种方法往往能带来意想不到的发现。  
+此前，要证明 B 是 A 的逆矩阵，我们需要同时验证 BA=In 和 AB=In 两个条件。而事实上，只需验证其中一个条件就足够了。
+
+**定理**：设 $A \in \mathbb{R}^{n \times n}$，若存在矩阵 B，使得 $BA = I_n$ 或者 $AB = I_n$ ，则 A 可逆，且此时 $B = A^{-1}$
+
+## 2.4 行列式
+
+#### 2.4.1 直觉和解释
+
+
+对于矩阵 $$ A = \begin{pmatrix}
+a & b \\
+c & d 
+\end{pmatrix} $$其逆矩阵为：
+$$
+A^{-1} = \frac{1}{ad - bc} \begin{pmatrix}
+d & -b \\
+-c & a 
+\end{pmatrix}
+$$
+从公式中我们可以看出，逆矩阵存在的条件是 $ad-bc ≠ 0$  ，这个数 $ad - bc$ 被称为矩阵 A 的行列式，记作 $det(A)$
+
+行列式还有一个很好的解释。以变换矩阵为例，每个矩阵描述了一个线性变换，将一个小房子转变为另一个对象，原始房子围成的面积为1.25（屋顶占0.25），经过矩阵A变换后的面积则是$1.25|det(A)|$。原始面积因此按照因子 $|det(A)|$ 发生变化。
+
+使用绝对值符号是必要的，因为行列式还包含更多信息，当对象的方向发生改变时（例如在镜像变换中），行列式会变为负值。
+
+这里有几个具体的例子：
+
+- 沿着一个轴拉伸2倍，会使面积翻倍：$$det\begin{pmatrix} 2 & 0 \\ 0 & 1 \end{pmatrix} = 2 \cdot 1 - 0 \cdot 0 = 2$$
+- 镜像变换不改变体积，但会改变方向，此时 $det(A) = -1$。例如，对于沿直线 $x_1 = x_2$ 的镜像变换，我们得到：$$det\begin{pmatrix} 0 & 1 \\ 1 & 0 \end{pmatrix} = 0 \cdot 0 - 1 \cdot 1 = -1$$
+- 剪切变换既不改变面积也不改变方向，因此 $det(A)$ 必须等于1：$$det\begin{pmatrix} 1 & k \\ 0 & 1 \end{pmatrix} = 1 \cdot 1 - k \cdot 0 = 1$$
+- 在投影变换中，房子会塌缩成一条线，相应地，变换后的面积等于0，因此det(A)必须等于0：$$det\begin{pmatrix} 1 & 0 \\ 0 & 0 \end{pmatrix} = 1 \cdot 0 - 0 \cdot 0 = 0$$
+因此，行列式在某种程度上 **概括** 了变换 $x \to A_x$ 的效果。至少我们知道它如何影响物体的面积和方向，以及我们是否能够逆转这个变换。所有这些信息仅用一个简单的数字就能表达，这确实是非常显著的。
+
+一般来说，对于矩阵 $A \in \mathbb{R}^{n×n}$，我们可以定义一个数字 $det(A)$，**它描述了一个物体的(n维)体积通过变换而改变的程度**。如果在此过程中**方向也发生了变化，则这个数字应为负值**。不幸的是，计算 $det(A)$ 在一般情况下既不像 n=2 时那样简单，也不特别直观。我将很快给出一个递归计算方法，不做进一步解释。尽管对于 n>2，与公式的联系不再容易解释，但不应忘记行列式的解释。
+
+#### 2.4.2 余子式计算
+
+假设我们已经能够计算一个 $(n-1)×(n-1)$ 矩阵的行列式，现在令 $A \in \mathbb{R}^{n×n)}$，那么
+
+$det(A) = a_{11} det(A_{11}) - a_{12} det(A_{12}) + ... + (-1)^{n+1} a_{1n} det(A_{1n})$
+
+其中：
+
+- 矩阵 $A_{1j} \in \mathbb{R}^{(n - 1) × (n-1)}$是通过从 $A$ 中删除第一行和第 $j$ 列而得到的。
+- 系数 $a_{1j}, j = 1, ..., n$ 是 $A$ 的第一行的元素。
+
+我们已经知道如何计算 (2 × 2) 矩阵的行列式。利用上面的公式，我们也可以通过三个(2 × 2)行列式计算(3 × 3)矩阵的行列式。同样，(4 × 4) 矩阵的行列式可以通过四个(3 × 3)行列式计算，以此类推。由于系数 $a_{1j}$ 来自A的第一行，我们说我们沿着第一行展开了行列式。
+
+**上面的公式可以通过两种方式推广，首先，我们可以沿 "任意行" 展开：**
+
+设 $A \in \mathbb{R}^{n \times n}$，那么对于每个 $i = 1,2,...,n$ ，$det(A) = \sum_{j = 1}^n (-1)^{i+j}a_{ij}det(A_{ij})$
+
+**定义**：数值 $c_{ij} = (-1)^{i+j}det(A_{ij})$ 称为**余子式**
+
+**技巧**：我们也看到，沿着包含尽可能多零的行展开是有利的，这使我们能够避免计算尽可能多的子行列式。
+
+**沿着列展开**的余子式：设 $A \in \mathbb{R}^{n \times n}$，那么对于每个 $j = 1,2,...n$，$det(A) = \sum_{i = 1}^n (-1)^{i + j}a_{ij}det(A_{ij})$
+
+**定义**：我们称矩阵 $A = (a_{ij} \in \mathbb{R}^{n \times n}$ 为 ：
+
+- 上三角矩阵，如果对所有 $i > j$，都有 $a_{ij} = 0$
+- 下三角矩阵，如果对所有 $i < j$，都有 $a_{ij} = 0$
+
+**定理**：如果 $A \in \mathbb{R}^{n×n}$ 是一个三角矩阵，那么 $det(A)$ 是对角线元素的乘积：$det(A) = \prod_{i=1}^n) a_{ii}$
+#### 2.4.3 行变换计算
+
+**问题**：对于大多数其他矩阵，**通过余子式计算并不那么简单**。如果矩阵较大，余子式展开虽然在理论上是有效的，但在实践中已经不再可行。一般来说，对于一个 (n × n) 矩阵的余子式展开，**需要超过 n! 次乘法运算。**
+
+根据定理，行列式可以简单地计算为对角线元素的乘积，问题变成了 $det(A)$ 和 $det(U)$ 之间的关系，其中 U 是 A 的行阶梯形式。由于我们通过初等行变换从 A 得到 U。
+
+**定理**： 设 $A, B \in \mathbb{R}^(n×n)$
+
+- **倍数原则**：如果我们通过将 $A$ 的一行乘以 $k \in \mathbb{R}$ 得到 $B$，则 $det(B) = k \cdot det(A)$
+
+- **消元原则**：如果我们通过将一行的 $k$ 倍加到另一行得到 $B$，则 $det(B) = det(A)$
+
+- **交换原则**：如果我们通过交换 $A$ 的两行得到 $B$，则 $det(B) = -det(A)$
+
+**注释**：如果我们将此定理应用于单位矩阵 $I_n$，我们可以看到对于所有初等矩阵 $E$，行列式 $det(E)$ 要么是 $k$，要么是 1，要么是 -1。此外，对于任何矩阵 $A$，都有 $det(EA) = det(E)det(A)$。我们也可以将此重复应用于多个初等矩阵 $E_1,...,E_k$，使得：
+
+$det(E_1E_2...E_kA) = det(E_1)det(E_2)...det(E_k)det(A)$
+
+#### 2.4.4 行列式性质
+
+**定理**：设 $A \in \mathbb{R}^{n \times n}$，那么下面说法等价：
+
+- **$A$ 为可逆矩阵**
+- **$A^T$ 为可逆矩阵**
+- **A 的简化阶梯形式（初等变换）是单位矩阵 $I_n$**
+- **线性方程组 $Ax = 0$ 仅有零解（平凡解）**
+- **对任意 $b \in \mathbb{R}^n$，非齐次线性方程组 $Ax = b$ 有唯一解**
+- **对任意 $b \in \mathbb{R}^n$，非齐次线性方程组 $Ax = b$ 有解**
+- **A的列是线性无关的**
+- **A的行是线性无关的**
+- **A的列张成$\mathbb{R}^n$空间**
+- **A的行张成$\mathbb{R}^n$空间**
+- **$det(A) != 0$**
+
+**通过行列式，我们可以检验可逆性、可解性或线性独立性**
+
+**定理**：对于所有 $A,B \in \mathbb{R}^{n×n}$，有：
+
+- $det(AB) = det(A)det(B)$
+- $det(A) = det(A^T)$
+- $det(kA) = k^n \cdot det(A)$
+- $det(A+B) != det(A) + det(B)$，$A$ **和 $B$ 有超过一行不同时**
+
+**奇异矩阵**：奇异矩阵是指**不可逆（不可逆转）** 的**方阵**。
+
+
+
 
