--- a/3. 向量空间.md
+++ b/3. 向量空间.md
@@ -13,3 +13,323 @@
 - $c(du) = (cd)u$.
 - $1u = u$.
 
+- **例1**：集合 V = {0}，配合运算：0 + 0 = 0 和 $c \cdot 0 = 0$ 是一个向量空间
+- **例2**：设V是所有的实数序列 $v = (v_1,v_2,...) = (v_i)_{i = 1}^{\infty}$，其中 $v_1,v_2,...\in \mathbb{R}$ ，我们按分量定义**加法和标量乘法**，则 V 是一个向量空间，零向量是 $(0,0,...)$
+	- $u + v = (u_1,u_2,...) + (v_1,v_2,...) = (u_1 + v_1, u_2 + v_2,...)$
+	- $cu = (cu_1,cu_2,...)$
+- **例3**：所有 $(m \times n)$ 矩阵的集合，配合通常的加法和标量乘法运算，是一个向量空间，零向量对应于零矩阵 $0 \in \mathbb{R}^{m \times n}$
+- **例4**：所有函数$f:\mathbb{R} \to \mathbb{R}$ 的集合是一个向量空间，我们定义加法和标量乘法如下：
+	- $(f+g)(x) = f(x) + g(x)$
+	- $(c \cdot f)(x) = c\cdot f(x)$
+	- 零向量是常数函数，对于所有$x \in \mathbb{R}$，$f(x) = 0$
+
+## 3.2 子空间
+
+我们感兴趣的向量空间 W 通常是更大向量空间 V 的一部分，这时我们称 W 为 V 的子空间，部分公理会自动满足，因此，我们采用以下定义：
+
+**定义**：非空子集 $W \subset V$ 是向量空间 V 的一个子空间，如果满足以下两个性质：  
+
+- 对所有 $u, v \in W$，都有 $u+v \in W$
+- 对每个$c \in \mathbb{R}$ 和 $v \in W$，都有 $cv \in W$
+
+这两个性质表明W对加法和标量乘法是封闭的，值得注意的是，$0 \in W$
+
+**例1**：集合 $W = {0} \subset V$ 是一个子空间
+
+**例2**：$\mathbb{R}^3$ 中通过原点的每个平面都是 $\mathbb{R}^3$ 的子空间，它可以通过线性方程组 $Ax = 0$ 表示。$\mathbb{R}^3$中**不 包含原点 0 的平面不可能是子空间** ---- **非常重要**
+
+证明：设 W 是 Ax = 0 的解集，显然 $0 \in W$，我们需要证明 W 对加法和标量乘法是封闭的
+
+加法封闭性：设 $x, y \in W$，则有：$A(x + y) = Ax + Ay = 0 + 0 = 0$，所以 $x + y \in W$
+
+数乘封闭性：同样，对于任意 $c \in \mathbb{R}$ 和 $x \in W$，  $A(cx) = cAx = c \cdot 0 = 0$， 所以 $cx \in W$
+
+当我们将线性组合和张成的定义扩展到一般向量空间时，我们会得到另一个重要的例子
+
+**例3**：$\mathbb{R}^2$ 不是 $\mathbb{R}^3$ 的子空间，更确切地说，$\mathbb{R}^2$ 甚至不是 $\mathbb{R}^3$ 的子集：每个 $x \in \mathbb{R}^2$ 由两个分量组成，而 $y \in \mathbb{R}^3$ 由三个分量组成
+
+**例4**：设 V = Rⁿˣⁿ ，即所有 (n × n) 矩阵的空间，那么所有对称矩阵的集合 W = {A ∈ V : A = Aᵀ} 是 V的一个子空间
+
+**例5**：所有 n 次多项式的集合 $P_n = \{a_0 + a_1x + ··· + a_nx^n : a_0, ..., a_n \in \mathbb{R}\}$  是所有函数 $f : \mathbb{R} \to \mathbb{R}$空间的一个子空间
+
+> [!note] 线性组合
+> 如果向量 $v \in V$ 可以表示为 $v = c_1v_1 + ··· + c_kv_k$  其中 $c_1, ..., c_k \in \mathbb{R}$，则我们称 v 是向量$v_1, ..., v_k \in V$ 的线性组合
+
+> [!note] 张成空间
+> 给定向量 $v_1, ..., v_k \in V$ 的所有线性组合的集合，我们称为 **张成空间** 或 **由这些向量**
+> **张成或生成的空间**
+
+**例1**：单位向量 $e_1, ..., e_n \in \mathbb{R}^n$ 张成 $\mathbb{R}^n$：对于每个$x \in \mathbb{R}^n$，有 $x = x_1e_1 + ··· + x_ne_n$
+
+**例2**：多项式 1, x, x², ..., xⁿ 张成了多项式空间 $\mathbb{P}_n$，因为每个多项式 $p \in \mathbb{P}_n$我们都可以写成： 
+
+				$p = a_0 \cdot 1 + a_1x + ··· + a_nx^n$  
+
+所以有 $\mathbb{P}_n = span\{1, x, x^2, ..., x^n\}$
+
+
+>[!attention] 对于向量空间 V 中的任意向量 $u_1, ..., u_n$，$W = span\{u_1, ..., u_n\}$ 是 V 的一个子空间
+
+>[!attention] 设 V 是一个向量空间，$W_1, ..., W_n \in V$ 是子空间，那么 $W = W_1 ∩ ··· ∩ W_n$ 也是 V 的一个子空间
+
+## 3.3 基底和维数
+
+当 $V = span\{v_1, ..., v_n\}$ 时，这些向量在某种程度上表征了空间 $V$ ，但可能我们可以省略一个或多个向量，如果 $V = \mathbb{R}^n$，我们已经有一个名称来描述这种情况。
+
+> [!note] 线性相关和线性无关
+> 向量空间 V 中的一组向量 $v_1, ..., v_k$ ，如果向量方程  $x_1v_1 + ··· + x_kv_k = 0$  只有平凡解 $x = 0$，则这组向量被称为线性无关，否则，我们称这些向量线性相关
+
+>[!attention] 基底
+>如果一组向量 ${v_1, ..., v_n}$ 能够张成（生成）整个向量空间 $V$，并且这组向量是最小的（不能再减少任何一个向量而仍然张成整个空间），那么我们称这组向量为 $V$ 的一个基底
+
+$\mathcal{B} = \{v_1,...,v_n\}$ 是向量空间 $V$ 的基地，则：
+
+- $\mathcal{B}$ 是线性无关的
+- $V = span(\mathcal{B})$
+
+>[!attention] 维数
+>基底中向量的数量被称为相应向量空间的维数
+
+
+> [!note] 维数的记号
+> 设 $\{v_1, ..., v_n\}$ 是向量空间 V 的一个基底，那么我们称 n 为 V 的维数，并记为 $dim(V) = n$，对于零空间，我们定义 $dim(\{0\}) = 0$
+
+一个向量空间 V 可以有很多不同的基底，维数的定义只有在所有基底都包含相同数量的向量时才有意义
+
+**例1**： $\mathbb{R}^n$ 的标准基由向量 $e_1, ..., e_n \in \mathbb{R}^n$ 组成，因此 $dim(\mathbb{R}^n) = n$
+
+**例2**： $\mathbb{R}^3$ 的另一个基底例如是 $v_1 = (1, 1, 0)，v_2 = (0, 1, 1)，v_3 = (0, 0, -1)$
+
+**例3**： 设 $E_{ij} \in \mathbb{R}^{m \times n}$ 是在 $(i, j)$ 位置有 1，其他位置都是 0 的矩阵，那么：
+
+${E_{ij} : i = 1, ..., m; j = 1, ..., n}$ 是 $\mathbb{R}^{m \times n}$ 的一个基底，因此 $dim(\mathbb{R}^{m \times n}) = mn$
+
+**例4**： 集合 $B = \{1, x, x^2, ..., x^n\}$ 是多项式空间  $P_n = \{a_0 + a_1x + ··· + a_nx^n : a_0, ..., a_n \in \mathbb{R}\}$ 的一个基底，这里基底中的每个元素被理解为函数 $f_j(x) = x^{j-1}$ 要生成一个函数空间，基底也必须由函数组成，因此 $dim(\mathbb{P}_n) = n + 1$
+
+**例5**： 所有序列 $(x_1, x_2, ...) \in \mathbb{R}^{\infty}$ 的集合可以由基底 $e_1 = (1, 0, 0, ...)，e_2 = (0, 1, 0, ...)$ 等生成，需要无限多个基向量，因此该空间是无限维的
+
+### 坐标
+
+每个向量 $x \in \mathbb{R}^n$ 我们都可以在标准基底中表示：  $x = x_1e_1 + ··· + x_ne_n$ ，我们称 $x_1, ..., x_n$ 为x相对于基底 $\{e_1, ..., e_n\}$ 的坐标，这个概念也可以扩展到其他基底。
+
+>[!attention] 坐标的表达
+>设 $\mathcal{B} = \{v_1,...,v_n\}$ 是向量空间 V 的一个基底，且 $v = x_1v_1 + ... + x_nv_n$，那么我们称 $(x_1,x_2,...,x_n)$ 为 V 在基底 $\mathcal{B}$ 下的坐标，并记为 $[v]_{\mathcal{B}} = (x_1,...,x_n)$
+
+**在某种意义上，向量空间的所有基底都是等价的。每个向量在任何基底下都有唯一的表**
+
+> [!note] 向量的坐标表达
+> 设 $\mathcal{B} = {v_1, ..., v_n}$ 是向量空间 $V$ 的一个基底，那么每个 $v \in V$ 都可以**唯一地表示**为 $v = c_1v_1 + ··· + c_nv_n$，其中 $c_1,...,c_n \in \mathbb{R}$
+
+**证明**：因为 $\mathcal{B}$ 是一个基底，每个向量都可以表示为 $v = c_1v_1 + ··· + c_nv_n$，假设 $v = d_1v_1 + ··· + d_nv_n$ 是另一种表示，那么，$0 = v - v = (c_1 - d_1)v_1 + ··· + (c_n - d_n)v_n$
+
+因为 $\mathcal{B} = {v_1, ..., v_n}$ 是线性无关的，所以必须有 $c_j - d_j = 0$，即 $c_j = d_j$ 对所有 $j = 1, ..., n$ 成立，因此，**表示是唯一的**。
+
+**注意：如果一组向量线性无关，没有一个向量可以表示为其他向量的线性组合，因此当它们的线性组合等于零向量时，只有当所有系数都为零时才成立**
+
+我曾声称我们可以直观地将所有向量空间看作像 Rⁿ 一样。定理给了我们第一个数学上的证明：
+
+假设 V 是一个（有限维）向量空间——由序列、矩阵、函数或其他任何东西组成，设B = {b₁, ..., bₙ}是该空间的任意一个基底。那么我们总是可以将元素 v ∈ V 表示为坐标 [v]ᵦ ∈ Rⁿ。即使不是直接显而易见的，许多性质在这个过程中仍然保留。这是因为转换到B坐标是一个线性变换。
+
+>[!note] 坐标变换
+>设 V 是一个向量空间，$\mathcal{B} = \{b_1, ..., b_n\}$ 是 V 的一个基底，那么我们可以定义一个函数 $T_{\mathcal{B}}: V \to \mathbb{R}^n$，它将 V 中的每个向量 $v$ 映射到它在基底 $\mathcal{B}$ 下的坐标表示： $T_{\mathcal{B}}(v) = [v]_{\mathcal{B}}$ ，并且这个变换是线性的。
+
+定理声明这个坐标变换函数 $T_{\mathcal{B}}$是线性的，也就是说它满足线性函数的两个基本性质：
+
+- 加法保持性
+- 数乘保持性
+
+简单来说，这意味着当我们将向量从原始空间V变换到它们在基底B下的坐标表示时，向量的加法和数乘运算在变换前后是一致的。**这是非常重要的性质，因为它保证了向量空间的基本代数结构在坐标表示下得以保持。**
+
+>[!note] 线性无关
+>设 V 是一个向量空间，$\mathcal{B}$ 是 V 的任意一个基底，向量 $v_1, ..., v_n \in V$ 是线性无关的，当且仅当它们在基底 $\mathcal{B}$ 下的坐标向量 $[v_1]_{\mathcal{B}}, ..., [v_n]_{\mathcal{B}}$ 是线性无关的
+
+### 基底变换
+
+因为坐标变换 $T_{\mathcal{B}}$ 是唯一的，所以必须存在一个逆函数 $T_{\mathcal{B}}^{-1}$，下面的结果表明，这个逆函数也是线性的：
+
+>[!note] 逆函数线性性质
+>设 $T: V \to W$ 是线性的，且 $T^{-1}: W \to V$ 是其逆函数，那么 $T^{-1}$ 也是线性的
+
+现在，我们考虑一个向量空间 V 的两个基底 $A = \{a_1, ..., a_m\}$ 和 $B = \{b_1, ..., b_n\}$，以及相应的坐标变换 $T_A$ 和 $T_B$ ，那么有：
+
+$[v]_B = (T_B \circ T_A^{-1})([v]_A) = T_B(T_A^{-1}([v]_A))$，这个过程可以通过以下图表来理解：$[v]_A \xrightarrow{T_A^{-1}} v \xrightarrow{T_B}[v]_B$
+
+映射 $T_{A \to B} = T_B \circ T_A^{-1}$ 是从 $\mathbb{R}^m$ 到 $\mathbb{R}^n$ 的，**因为线性函数的复合仍然是线性的**，所以映射 $T_{A \to B} 可以用一个矩阵 $\mathcal{P}_{A \to B} \in \mathbb{R}^{n \times m}$表示
+
+**简单解释：**
+
+1. 这里定义了一个映射 $T_{A \to B}$，它是由 $T_B$ 与 $T_A^{-1}$ 的复合得到的，这个映射从 m维空间 Rᵐ 映射到n维空间 Rⁿ。
+    
+2. 因为线性函数的复合仍然是线性函数，所以这个复合映射 $T_{A \to B}$ 也是线性的，因此可以用一个n行m列的矩阵 $P_{A \to B}$来表示。
+    
+3. 最关键的部分是：利用线性方程组的理论，作者指出这个结果可以用来证明向量空间维数的唯一性——这是线性代数中的一个重要定理，即同一个向量空间在不同基底下的维数是相同的。
+    
+
+这段话是在解释如何利用坐标变换和线性映射的性质来证明向量空间维数的唯一性这一基本性质。
+
+>[!note] 基底数量一致性
+>如果向量空间 V 有一个由 n 个向量组成的基底 B，那么 V 的任何其他基底也必须恰好由 n 个向量组成
+
+假设 A 是另一个由 m 个向量组成的基底。因为坐标变换是唯一的，对于任意 b∈Rᵐ，线性方程组PA→Bx = b必须有唯一解x∈Rⁿ。我们可以不失一般性地假设m≤n（否则我们可以交换A和B的角色）。如果m<n，那么会存在至少一个自由变量。根据定理1.8.2和定理1.8.6，此时线性方程组的解不可能是唯一的。因此，必须有m=n。
+
+这个定理证明了向量空间的维数是唯一的，无论选择什么基底，基底中的向量个数（即维数）都是
+相同的。这是线性代数中最基本、最重要的结论之一。
+
+**如何用基底向量来表示从一个基底到另一个基底的变换矩阵 ？**
+
+- $A = \{a_1,...,a_n\},B = \{b_1,...,b_n\}$ 是两个基地
+- $A,B \in \mathbb{R}^{n \times n}$，两个矩阵的列向量分别为 $a_1,...a_n$ 和 $b_1,...,b_n$
+- 向量 $v$ 在两个基底下的表示关系：$v = A[v]_A = B[v]_B$
+- 因为基底向量是线性独立的，所以矩阵A和B必须是可逆的：
+	- $P_{A \to B} = B^{-1}A$
+	- $P_{B \to A} = A^{-1}B$
+- 这意味着 $P_{A \to B} = P_{B \to A}^{-1}$
+
+**几何意义**：从基底A到基底B的变换矩阵 $P_{A \to B}$ 实际上是将 A 的基底向量用 B 的基底表示出来
+
+**小例子**：
+
+- $R^2$ 中两个基底：
+	- $B = \{e_1,e_2\} = \{(1,0),(0,1)\}$  
+	- $A = \{a_1,a_2\} = \{(2,1),(1,1)\}$
+- 将这些基底向量作为矩阵的列向量：
+	- $B = [1 \quad 0;0 \quad 1]$ 单位矩阵
+	- $A = [2 \quad 1;1 \quad 1]$
+- A 到 B的变换矩阵：$P_{A \to B} = B^{-1}A = I \cdot A = [2 \quad 1;1 \quad 1]$
+- B 到 A的变换矩阵：$P_{B \to A} = A^{-1}B = A^{-1} = [1 \quad -1;-1 \quad 2]$
+- 验证两个矩阵是否互逆：$P_{A \to B} \cdot P_{B \to A} = [2 \quad 1; 1 \quad 1]·[1 \quad -1; -1 \quad 2] = [1 \quad 0; 0 \quad 1] = I$
+
+**计算**：
+
+假设向量 v = (3,2) 在标准基底 B 下的坐标是 $[v]_B = (3,2)$，要找到它在基底 A下的坐标 $[v]_A$：
+
+$[v]_A = P_{B \to A} \cdot [v]_B = [1 \quad -1; -1 \quad  2] \cdot [3; 2] = [1; 1]$
+
+这意味着：$v = 1\cdot a_1 + 1 \cdot a_2 = 1 \cdot (2,1) + 1 \cdot (1,1) = (3,2)$
+
+>[!note] 
+>设A = {a₁, ..., aₙ} 和 B = {b₁, ..., bₙ} 是向量空间V的两个基底，那么变换矩阵 $P_{A \to B}$ 是一个矩阵，其列向量分别为 $([a_1]_B · · · [a_n]_B)$
+
+### 有用的性质
+
+>[!attention] 性质1
+>设 V 是一个 n 维向量空间
+>- 如果一个集合 $M \subset V$ 包含 **多于** n个向量，那么它一定是**线性相关的**
+>- 如果一个集合 $M \subset V$ 包含 **少于** n个向量，那么它 **不能张成整个空间**  V
+
+
+>[!note]
+>设 V 是一个 n 维向量空间，$M \subset V$ 是一个恰好包含 n 个向量的集合：
+>- 如果 M 是线性独立的，那么M是一个基底
+>- 如果 $span(M) = V$（即M张成了整个空间V），那么M是一个基底
+
+### 线性方程组的子向量空间
+
+在线性代数中，子空间通常以两种形式出现：
+
+• 作为线性方程组 $Ax = 0$ 的解集  
+• 作为给定向量的张成空间 $span\{v_1, ..., v_n\}$
+
+这段文字引入了线性代数中两种常见的子空间表示形式，并指出它们之间存在内在联系，这是非常重要的观察，因为它**揭示了线性代数中不同概念之间的统一性**。这两种表达方式分别对应于子空间的 **"隐式描述"和"显式描述"**，理解它们之间的关系对于深入理解线性代数非常重要。
+
+#### 列空间
+
+设 W 是所有向量 b ∈ Rⁿ 的集合，使得方程 Ax = b 有解。每个这样的向量 b ∈ W 都可以表示为矩阵A 的列向量 a₁, ..., aₙ 的线性组合。换句话说，所有使得 Ax = b 有解的向量 b 的集合等于 W = span{a₁, ..., aₙ}，我们称之为矩阵A的列空间。
+
+这段内容解释了矩阵A的列空间的概念：
+
+1. 列空间是矩阵A的所有列向量的张成空间
+2. 从方程的角度看，列空间包含了所有能够通过Ax = b得到解的右端向量b
+3. 换言之，一个线性方程组 Ax = b 有解当且仅当向量 b 在矩阵 A 的列空间中
+
+这是一个非常重要的概念，它将线性方程组的可解性与矩阵的几何性质联系起来：方程Ax = b有解的**充要条件**是 b 能够表示为 A 的列向量的线性组合。这也解释了为什么我们称之为"列空间"——因为它是由矩阵的列向量张成的空间。-**-- 把矩阵A看作是由列向量构成的一个行向量**
+
+>[!attention] 列空间
+>设 $A \in \mathbb{R}^{m \times n}$ 是一个矩阵，其列向量为 $a_1, ..., a_n \in \mathbb{R}^m$，我们用 $col(A) = span\{a_1, ..., a_n\}$  表示 A 的 **列空间**
+
+列空间 $col(A)$ 对应于线性变换 $T : x \mapsto Ax$ 的像集，它包含了所有我们可能通过变换 $x \mapsto Ax$ 得到的 $\mathbb{R}^m$ 中的向量。
+
+我们将矩阵 A 看作一个从 $\mathbb{R}^n$ 到 $\mathbb{R}^m$ 的线性变换时，**列空间**正好是这个变换的**像（或值域）**。换句话说，列空间包含了线性变换 $T(x) = Ax$ 能够 "到达"的所有可能的向量。
+
+**矩阵的秩**：$range(A) = dim(col(A))$ **秩告诉我们矩阵中有多少个线性无关的列向量**
+
+**约束变量**：列空间的维数 $dim(col(A))$ 等于A中的约束变量数量
+
+**引理**：$rang(A) = dim(col(A)) = dim(col(A^T)) = rang(A^T)$  **矩阵转置后秩不变**
+
+简而言之，矩阵的秩是衡量矩阵"**信息含量**"的一个关键指标，它反映在以下几个等价的概念中：
+
+- 线性无关列的数量
+- 列空间的维数
+- 行空间的维数
+- 行阶梯形中非零行的数量
+- 主元位置的数量
+
+#### 核空间
+
+反过来，每一个自由变量都给我们一个 Ax = 0 解集的独立方向。从定理我们已经知道，齐次线性方程组 Ax = 0 的解集形成一个向量空间，我们称这个向量空间为**矩阵A的核空间**。
+
+>[!note] 核空间
+>矩阵 $A \in \mathbb{R}^{m \times n}$ 的核空间是集合： $ker(A) = \{x: Ax = 0\}$
+
+核空间（ker(A)）是指所有使矩阵A乘以它们等于零向量的向量x的集合。也就是说，ker(A)包含了方程Ax = 0的所有解。
+
+这个概念的几个重要含义：
+
+1. **几何意义**：核空间包含了所有被线性变换 A "**映射为零**" 的向量，如果把矩阵 A 看作一个线性变换，核空间就是那些被变换 "**压缩"** 到原点的向量集合。
+    
+2. **与自由变量的关系**：当我们求解线性方程组Ax = 0时，每个自由变量都对应着解空间的一个独立方向，自由变量的数量等于核空间的维数。
+    
+3. **维数关系**：核空间的维数（称为零化度）等于列数减去矩阵的秩：$dim(ker(A)) = n - rang(A)$
+    
+4. **基本性质**：核空间是一个向量空间，意味着：
+    
+    - 它包含零向量
+    - 如果x和y在核空间中，它们的和x+y也在核空间中
+    - 如果x在核空间中，那么任何标量倍cx也在核空间中
+
+**引理**：核空间的维数 $dim(ker(A))$ 等于 A 中自由变量的数量
+
+总共有 n 个变量，其中 rang(A) 个是约束变量，dim(ker(A)) 个是自由变量，由此得出 col(A) 和 ker(A) 维数之间的基本关系：
+
+对于任意 $A \in \mathbb{R}^{m \times n}$，有 $rang(A) + dim(ker(A)) = n$，在某种程度上，空间 $col(A)$ 和 $ker(A)$ 是互补的，然而，它们通常是不同向量空间的子空间，我们有 $col(A) \subset \mathbb{R}^m$，但 $ker(A) \subset \mathbb{R}^n$
+
+#### 等价关系
+
+>[!note] 等价关系
+>设 $A \in \mathbb{R}^(n×n)$，则以下陈述是等价的：
+>- $A$ 是可逆的
+>- $A^T$是可逆的
+>- $A$ 的简化行阶梯形是 $I_n$
+>- 线性方程组 $Ax = 0$ 只有平凡解
+>- 线性方程组 $Ax = b$ 对任意 $b \in R^n$ 恰好有一个解
+>- 线性方程组 $Ax = b$ 对任意 $b \in R^n$ 有解
+>- $A$ 的列向量线性无关
+>- $A$ 的行向量线性无关
+>- $A$ 的列向量张成 $\mathbb{R}^n$
+>- $A$ 的行向量张成 $\mathbb{R}^n$
+>- $det(A) ≠ 0$
+>- $rang(A) = n$
+>- $ker(A) = {0}$
+
+#### 一般的线性映射
+
+设 $T: D \to W$ 是两个向量空间 D 和 W 之间的线性映射：
+
+- **像集是**  
+    
+    $Im(T) = \{w \in W : \exists v ∈ V, T(v) = w\}$
+    
+- **核空间是**  
+    
+    $ker(T) = \{v \in V : T(v) = 0\}$
+    
+
+如果向量空间是有限维的，我们可以像在 $R^n$ 中那样理解这些一般概念。设D和W是相应的基，且D和W是有限维的，其中n = dim(D)，m = dim(W)。那么D和W分别与R^n和R^m同构。我们可以将每个v ∈ D唯一地表示为[v]D，将每个w ∈ W唯一地表示为[w]W。因为映射T是线性的，所以在B和W的坐标下，它是一个矩阵-向量乘法。现在我们回到了熟悉的领域。映射T的核空间和像集可以从矩阵的相应属性中推导出来。
+
+
+
+
+
+
+
