--- a/5. 正交性和投影.md
+++ b/5. 正交性和投影.md
@@ -315,7 +315,7 @@ P95-131   9.12 - 13
 - 原来正交 ，加权后不正交（反之亦然）
 - 原来长度，加权后长度变化
 
-#### 9.2  矩阵空间
+#### 9.2  矩阵空间（Frobenius范数）
 
 **定义 5.9.3.** 向量空间 $R^{m×n}$ 上的**标准标量积**定义为：$<A,B> = \Sigma_{i=1}^m\Sigma_{j=1}^na_{ij}b_{ij}$
 
@@ -384,5 +384,53 @@ $ℓ_2 = \{x = (xᵢ)_{i=1}^{\infty} : Σ_{i=1}^n x²ᵢ < ∞\}$
 
 ### 10. 正交对角化
 
+- 正交对角化定义：$A \in \mathbb{R}^{n \times n}$，存在一个 正交矩阵 $P$ 和 对角矩阵 $D$，使得：
+
+	- $P^TAP = D$
+	- $A = PDP^T$
+
+- 正交对角化条件：**当且仅当 A 是对称的**
+
+	- **证明**：$A^T = (PDP^T)^T = (P^T)^T \cdot D^T \cdot P^T = PDP^T = A$
+
+	- 对角矩阵的转置等于其自身
+
+- 对称矩阵的**特征子空间**彼此正交
+
+	- **证明**：$v_1,v_2$ 是两个特征向量，要证明正交，即证明 $v_1^Tv_2 = 0$
+	- $\lambda_1 v_1^Tv_2 = (Av_1)^Tv_2 = v_1^TA^Tv_2 = v_1^TAv_2 =\lambda_2v1^Tv_2$
+	- $\lambda_1 \neq \lambda_2$
+	- 所以，$v1^Tv2 = 0$
+
+- 对称矩阵的所有**特征值都是实数**
+
+- Schur分解：设 $A \in R^{n×n}$ 的特征值都是实数，则存在一个正交矩阵 $P \in R^{n×n}$，使得：
+
+		$D = P^T A$ 
+		
+	P 是一个上三角矩阵，**且其对角线上是 A 的特征值**
 
 
+- 矩阵A的正交对角化算法：
+
+	1. 为 A 的每个特征子空间求一组基
+	2. 对每个特征子空间，用施密特方法构造一组正交归一基（**如果已经正交，跳过**）
+	3. 将这些基向量何在一起得到 $R^n$ 的一组正交**归一基**（除以范数）
+	4. 将这组正交归一基的向量按顺序写入矩阵 P 的列中，并把对应的特征值（按相同顺序）写到**对角矩阵 D** 的对角线上
+
+![[ad834444-d2d8-448c-883f-71ece8f34230.png]]
+-- **A必须是对称矩阵**
+
+**谱分解**：设 $A = P Λ P^T$ 是 A 的谱分解，P 的列向量是**正交归一的特征向量** p1, …, pn，Λ = diag(λ1, …, λn) 包含对应的特征值，于是有：
+
+$A = P Λ P^T = \Sigma_{i=1}^n \lambda_ip_ip_i^T = \Sigma_{i=1}^n \lambda_i proj_{pi}(x)$ 
+
+
+![[171c9c94-40eb-4312-8ea9-4e9a1a3892ab.png]]
+
+![[2280ed42-401b-465a-b6bb-24cfc8dbcf2e.png]]
+
+- 找到特征向量
+- x 在两个特征向量上投影
+- 投影后乘以 $\lambda$ 缩放
+- 缩放后的向量相加
