--- a/复习小抄.md
+++ b/复习小抄.md
@@ -1,3 +1,121 @@
 
-9.15 - 9.17
+# SVD 知识依赖树 - 核心公式与定理
 
+## **SVD（奇异值分解）**
+
+- **定理**: 任意 m×n 矩阵 A 可分解为 **A = UΣV^T**
+- 其中 U(m×m), V(n×n) 是正交矩阵，Σ(m×n) 是对角矩阵
+- **奇异值**: σᵢ = √λᵢ(A^T A)
+ 
+
+### 1.1 对角化
+
+- **定理**: A = PDP^(-1)，其中 D 是对角矩阵
+- **可对角化条件**: A 有 n 个线性无关的特征向量
+
+#### 特征值与特征向量
+
+- **定义**: Av = λv (v ≠ 0)
+- **特征方程**: det(A - λI) = 0
+- **特征多项式**: p(λ) = det(λI - A)
+
+##### 行列式
+
+- **2×2**: det(A) = ad - bc
+- **性质**: det(AB) = det(A)·det(B)
+- **奇异判定**: det(A) = 0 ⟺ A 不可逆
+
+#### 相似矩阵
+
+- **定义**: B = P^(-1)AP
+- **性质**: 相似矩阵有相同特征值
+
+### 1.2 对称矩阵的谱定理
+
+- **谱定理**: 实对称矩阵 A = QΛQ^T (Q 正交)
+- **性质**:
+    - 特征值都是实数
+    - 不同特征值的特征向量正交
+
+---
+
+## **2. 正交性理论**
+
+### 2.1 正交矩阵
+
+- **定义**: Q^T Q = QQ^T = I
+- **性质**: ||Qx|| = ||x|| (保长性)
+- **列向量**: Q 的列构成标准正交基
+
+#### 内积
+
+- **定义**: ⟨u,v⟩ = u^T v = Σuᵢvᵢ
+- **长度**: ||v|| = √⟨v,v⟩
+- **角度**: cos θ = ⟨u,v⟩/(||u|| ||v||)
+
+#### Gram-Schmidt正交化
+
+- **公式**:
+    - v₁ = u₁
+    - v₂ = u₂ - proj_{v₁}(u₂)
+    - vₖ = uₖ - Σⱼ₌₁^(k-1) proj_{vⱼ}(uₖ)
+- **投影**: proj_v(u) = (⟨u,v⟩/⟨v,v⟩)v
+
+### 2.2 正交投影
+
+- **投影矩阵**: P = A(A^T A)^(-1)A^T
+- **最小二乘**: A^T Ax̂ = A^T b (正规方程)
+
+---
+
+## **3. 矩阵的四个基本子空间**
+
+### 基本关系
+
+- **维数定理**: dim(C(A)) + dim(N(A)) = n
+- **秩**: rank(A) = dim(C(A)) = dim(C(A^T))
+
+### 四个子空间
+
+- **列空间**: C(A) = {Ax : x ∈ ℝⁿ}
+- **零空间**: N(A) = {x : Ax = 0}
+- **正交性**: C(A) ⊥ N(A^T), C(A^T) ⊥ N(A)
+
+---
+
+## **4. 矩阵范数**
+
+### 谱范数
+
+- **定义**: ||A||₂ = max_{||x||=1} ||Ax||
+- **公式**: ||A||₂ = σ₁ (最大奇异值)
+- **性质**: ||A||₂² = λ_max(A^T A)
+
+### Frobenius范数
+
+- **定义**: ||A||_F = √(Σᵢⱼ aᵢⱼ²)
+- **与奇异值关系**: ||A||_F² = Σᵢ σᵢ²
+- **性质**: ||A||_F² = tr(A^T A)
+
+---
+
+## **5. 核心联系**
+
+### SVD与特征值分解
+
+- A^T A 的特征向量 → V (右奇异向量)
+- AA^T 的特征向量 → U (左奇异向量)
+- σᵢ² = λᵢ(A^T A) = λᵢ(AA^T)
+
+### SVD的关键性质
+
+- **秩**: rank(A) = 非零奇异值个数
+- **条件数**: κ(A) = σ_max/σ_min
+- **伪逆**: A⁺ = VΣ⁺U^T
+- **最佳低秩逼近**: A_k = Σᵢ₌₁^k σᵢuᵢvᵢ^T
+
+### 应用公式
+
+- **压缩**: 保留前 k 个奇异值
+- **主成分**: 最大方差方向 = v₁
+- **最小二乘解**: x = A⁺b = VΣ⁺U^T b
