--- a/6. 二次型与奇异值分解.md
+++ b/6. 二次型与奇异值分解.md
@@ -102,9 +102,18 @@ $f = \vec{x}^TA\vec{x}$ 的**拆分理解**：
 - 其中 P = (p₁ ⋯ pₙ) 的列是正交特征向量
 - 因此有 $x^T Ax = x^T PΛP^T x = (P^T x)^T Λ(P^T x)$
 
+
+**正交对角化**：- $A = PDP^T$
+
 通过坐标变换到**特征向量基**  $y = P^T x$，**我们可以将二次型表示为纯二次项**
 
 **定理**：$A \in ℝ^{n \times n}$ 是一个**对称矩阵**，通过 P **正交地对角化**为矩阵 $Λ = diag(λ₁,...,λₙ)$，那么对于 $y = P^T x$，有：$x^T Ax = y^T Λy = \Sigma_{i=1}^n \lambda_i \cdot y_i^2$
+
+
+
+- 因为：$Q(x) = x^TAx = x^TPDP^Tx = (P^Tx)^T \cdot D \cdot P^Tx = y^TDy, y = P^Tx$
+- 所以：$Q(x) = \lambda_1y_1^2 + ... + \lambda_ny_n^2$
+- 所有：**任何二次型都是若干个独立方向上的抛物线的叠加!!**
 
 - $y = P^Tx$ 是坐标 $x$ 的坐标变换
 - $x = [x_1, x_2,..., x_n]^T$ 是原始坐标
